--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -407,3 +407,8 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+
+  .control-label {
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 20px;
+  }
