--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -51,22 +51,25 @@ a {
     transition: all .2s ease-in-out;
 }
 .timer_box{
-    margin: 20px 18px;
+    margin: 20px 22px;
     display: inline-block;
     padding: 14px 6px 0px 6px;
-    text-align: left;
-    width: 70px;
+    text-align: right;
+    
 
     
 }
 .timer_box h1{
-    font-size: 44px;
+    font-size: 60px;
     margin-top: 0px;
     margin-bottom: 0px;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: white;
 }
-.timer_box p{ margin-top: 0px;}
+.timer_box p{ 
+    margin-top: 0px;
+    margin-right: 5px;
+}
 
 
 
