--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -17,7 +17,13 @@ html {
     height: 100%;
 }
 
-h1,
+h1{
+    font-size: 45px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: white;   
+}
 h2,
 h3,
 h4,
