--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -18,7 +18,8 @@ html {
 }
 
 h1{
-    font-size: 45px;
+    font-size: 36px; /* Some tweener fallback that doesn't look awful */ 
+    font-size: 3.2vw; 
     margin-top: 0px;
     margin-bottom: 0px;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -57,16 +58,18 @@ a {
     transition: all .2s ease-in-out;
 }
 .timer_box{
-    margin: 20px 22px;
+    margin: 20px 20px;
+    margin: 2vw 1vw;
     display: inline-block;
-    padding: 14px 6px 0px 6px;
+    padding: 14px 0px 0px 0px;
     text-align: right;
     
 
     
 }
 .timer_box h1{
-    font-size: 60px;
+    font-size: 36px; 
+    font-size: 3.5vw; 
     margin-top: 0px;
     margin-bottom: 0px;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -74,7 +77,7 @@ a {
 }
 .timer_box p{ 
     margin-top: 0px;
-    margin-right: 5px;
+    margin-right: 0px;
 }
 
 
