--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -18,7 +18,7 @@ html {
 }
 
 h1{
-    font-size: 36px; /* Some tweener fallback that doesn't look awful */ 
+    font-size: 30px; /* Some tweener fallback that doesn't look awful */ 
     font-size: 3.2vw; 
     margin-top: 0px;
     margin-bottom: 0px;
@@ -58,17 +58,21 @@ a {
     transition: all .2s ease-in-out;
 }
 .timer_box{
-    margin: 20px 20px;
+    margin: 20px 18px;
     margin: 2vw 1vw;
     display: inline-block;
     padding: 14px 0px 0px 0px;
-    text-align: right;
-    
+    text-align: right;    
+}
+.timer_box:hover{
 
-    
+        -webkit-transform: rotateZ(-30deg);
+        -ms-transform: rotateZ(-30deg);
+        transform: rotateZ(-360deg);
+        transition:all 1s ease;
 }
 .timer_box h1{
-    font-size: 36px; 
+    font-size: 28px; 
     font-size: 3.5vw; 
     margin-top: 0px;
     margin-bottom: 0px;
@@ -131,6 +135,7 @@ a:focus {
     transition: background .3s ease-in-out;
 }
 
+
 .navbar-custom .nav li.active {
     outline: 0;
 }
@@ -189,6 +194,23 @@ a:focus {
     color:white;
 }
 
+.thanks{
+
+    display: table;
+    width: 100%;
+    height: 100%;
+    padding: 100px 0;
+    text-align: center;    
+    color: #fff;
+    background: url(../img/boda_1.jpg) no-repeat bottom center scroll;
+    background-color: #000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+
 .intro {
     display: table;
     width: 100%;
@@ -243,15 +265,19 @@ a:focus {
     outline: 0;
     background-color: transparent;
 }
+.dropdown{
+    background-color:transparent; 
+}
 .navbar-custom .nav .dropdown-toggle{
     color: red;
 }
 .navbar-custom .nav .dropdown-toggle:hover{
     color: red;
 }
-
+.dropdown-menu:focus,
 .dropdown-menu:hover {
     background-color: black;
+    color:black;
 }
 
 .btn-circle {
