--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -18,30 +18,59 @@ html {
 }
 
 h1{
-    font-size: 30px; /* Some tweener fallback that doesn't look awful */ 
-    font-size: 4vw; 
+
     margin-top: 0px;
     margin-bottom: 0px;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: white;   
+    color: white;
+
 }
-h2,
-h3,
+h2{
+    margin: 0 0 20px;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 35px;
+    letter-spacing: 1px; 
+    font-weight: 700;
+}
+
+h3{
+    
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 29px;
+    letter-spacing: 1px;     
+}
+
 h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
 }
 
+.white_with_black_stroke{
+    -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+}
+.gray_with_black_stroke{
+    -webkit-text-fill-color: #888; /* Will override color (regardless of order) */
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+}
+
+
+.text-justify{
+  text-align: justify;
+}
+
+
 @media all and (min-width: 768px) {
 .timer_box h1,
 h1{
-    font-size: 28px; 
-    font-size: 4vw; 
+    font-size: 28px;
+    font-size: 4vw;
   }
 }
 
@@ -84,7 +113,7 @@ a {
     margin: 2vw 1vw;
     display: inline-block;
     padding: 14px 0px 0px 0px;
-    text-align: right;    
+    text-align: right;
 }
 .timer_box:hover{
 
@@ -100,7 +129,7 @@ a {
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: white;
 }
-.timer_box p{ 
+.timer_box p{
     margin-top: 0px;
     margin-right: 0px;
 }
@@ -133,7 +162,7 @@ a:focus {
 .navbar-custom .navbar-brand:focus {
     outline: 0;
 }
-/*Aquí va las letras de la barra cuando toggle*/
+
 .navbar-custom .navbar-brand .navbar-toggle {
     padding: 4px 6px;
     font-size: 16px;
@@ -145,7 +174,6 @@ a:focus {
     outline: 0;
 }
 
-/*Aquí va las letras de la barra*/
 .navbar-custom a {
     color: #fff;
 }
@@ -156,6 +184,17 @@ a:focus {
     transition: background .3s ease-in-out;
 }
 
+.navbar-custom .nav li a:hover {
+    outline: 0;
+    color: rgba(255,255,255,.8);
+    background-color: transparent;
+}
+
+.navbar-custom .nav li a:focus,
+.navbar-custom .nav li a:active {
+    outline: 0;
+    background-color: transparent;
+}
 
 .navbar-custom .nav li.active {
     outline: 0;
@@ -169,16 +208,16 @@ a:focus {
     color: #fff;
 }
 
+
 @media(min-width:768px) {
     .navbar-custom {
-        padding: 10px 0;
+        padding: 20px 0;
         border-bottom: 0;
         letter-spacing: 1px;
         background: 0 0;
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
-		
     }
 
     .navbar-custom.top-nav-collapse {
@@ -201,6 +240,7 @@ a:focus {
 .intro-header .site-heading,
 .intro-header .post-heading,
 .intro-header .page-heading {
+  margin-top: 1vh;  
   padding: 100px 0 50px;
   color: white;
   background-color: transparent;
@@ -221,7 +261,7 @@ a:focus {
     width: 100%;
     height: 100%;
     padding: 100px 0;
-    text-align: center;    
+    text-align: center;
     color: #fff;
     background: url(../img/boda_1.jpg) no-repeat bottom center scroll;
     background-color: #000;
@@ -276,31 +316,6 @@ a:focus {
 
 }
 
-.navbar-custom .nav li a:hover {
-    outline: 0;
-    color: rgba(255,255,255,.8);
-    background-color: transparent;
-}
-
-.navbar-custom .nav li a:focus,
-.navbar-custom .nav li a:active {
-    outline: 0;
-    background-color: transparent;
-}
-.dropdown{
-    background-color:transparent; 
-}
-.navbar-custom .nav .dropdown-toggle{
-    color: red;
-}
-.navbar-custom .nav .dropdown-toggle:hover{
-    color: red;
-}
-.dropdown-menu:focus,
-.dropdown-menu:hover {
-    background-color: black;
-    color:black;
-}
 
 .btn-circle {
     width: 70px;
@@ -342,7 +357,7 @@ a:focus {
     -moz-animation-timing-function: linear;
 }
 
-@-webkit-keyframes pulse {    
+@-webkit-keyframes pulse {
     0% {
         -webkit-transform: scale(1);
         transform: scale(1);
@@ -359,7 +374,7 @@ a:focus {
     }
 }
 
-@-moz-keyframes pulse {    
+@-moz-keyframes pulse {
     0% {
         -moz-transform: scale(1);
         transform: scale(1);
@@ -419,13 +434,13 @@ a:focus {
     -moz-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
 }
-/*
+
 .btn-default {
     border: 1px solid #42dca3;
     color: #42dca3;
     background-color: transparent;
 }
-*/
+
 .btn-default:hover,
 .btn-default:focus {
     border: 1px solid #42dca3;
@@ -472,3 +487,45 @@ body {
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 20px;
   }
+
+
+
+#evento{
+    color:black;
+}
+
+#evento:hover{
+    color:red;
+}
+
+
+#enlaces, 
+#linki{
+    color:white;
+    background-color: transparent;
+    
+}
+
+#enlaces:hover,
+#linki:hover{
+    color:#EEE;
+    background-color: #4B4B4B; 
+}
+
+#enlaces:hover{
+
+}
+
+#ul_enlaces, 
+#ul_linki{
+    background-color: white;
+    
+}
+
+#footer{
+    color:white;
+}
+
+#footer_articles{
+    color:black;
+}
