--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -271,6 +271,16 @@ a:focus {
     -o-background-size: cover;
 }
 
+.article_image{
+    display: table;
+    width: 100%;
+    height: 15%;
+    text-align: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
 
 .intro {
     display: table;
@@ -410,7 +420,7 @@ a:focus {
     margin-top: 100px;
 }
 
-@media(min-width:767px) {
+@media(min-width:768px) {
     .content-section {
         padding-top: 250px;
     }
@@ -512,9 +522,6 @@ body {
     background-color: #4B4B4B; 
 }
 
-#enlaces:hover{
-
-}
 
 #ul_enlaces, 
 #ul_linki{
@@ -529,3 +536,4 @@ body {
 #footer_articles{
     color:black;
 }
+
