--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -21,7 +21,7 @@ h1{
 
     margin-top: 0px;
     margin-bottom: 0px;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Open Sans', Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: white;
 
 }
@@ -169,14 +169,14 @@ a:focus {
 }
 
 .light {
-    font-weight: 400;
+    font-weight: 350;
 }
 
 .navbar-custom {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Open Sans', Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #000;
 }
 
