--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -273,13 +273,23 @@ a:focus {
 
 
 .article-body{
-
+    font-family: 'Open Sans', Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     height: auto;
     background-color: white;
     margin-top: 100px;
     color:white;
     margin-right: 10px;
     margin-left:10px;
+}
+.article_image{
+    display: table;
+    width: 100%;
+    height: 15%;
+    text-align: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 .thanks{
@@ -298,16 +308,7 @@ a:focus {
     -o-background-size: cover;
 }
 
-.article_image{
-    display: table;
-    width: 100%;
-    height: 15%;
-    text-align: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
+
 
 .intro {
     display: table;
@@ -496,17 +497,24 @@ footer p {
     margin: 0;
 }
 
-::-moz-selection {
-    text-shadow: none;
-    background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+/*** Works on common browsers ***/
+::selection {
+    background-color: #FB0;
+    color: #FFF;
 }
 
-::selection {
-    text-shadow: none;
-    background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+/*** Mozilla based browsers ***/
+::-moz-selection {
+    background-color: #FB0;
+    color: #FFF;
 }
+
+/***For Other Browsers ***/
+::-o-selection {
+    background-color: #FB0;
+    color: #FFF;
+}
+
 
 img::selection {
     background: 0 0;
