--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -308,6 +308,22 @@ a:focus {
     -o-background-size: cover;
 }
 
+.error{
+
+    display: table;
+    width: 100%;
+    height: 100%;
+    padding: 100px 0;
+    text-align: center;
+    color: #fff;
+    font-family:sans-serif;
+    background-color: #42dca3;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 
 
 .intro {
