--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -7,7 +7,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family:  Arial, sans-serif;
     color: #fff;
     background-color: #000;
 }
@@ -21,7 +21,7 @@ h1{
 
     margin-top: 0px;
     margin-bottom: 0px;
-    font-family: 'Open Sans', Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family:  Arial, sans-serif;
     color: white;
 
 }
@@ -29,7 +29,7 @@ h1{
 
 h3{
     
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family:  Arial, sans-serif;
     font-size: 30px;
     letter-spacing: 1px;     
     text-align: left;
@@ -39,7 +39,7 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family:  Arial, sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -58,7 +58,7 @@ h1{
 
 h2{
     margin: 0 0 20px;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 35px;
     letter-spacing: 1px; 
     font-weight: 700;
@@ -78,7 +78,7 @@ h1{
 
 h2{
     margin: 0 0 20px;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family:  Arial, sans-serif;
     font-size: 30px;
     letter-spacing: 1px; 
     font-weight: 700;
@@ -100,7 +100,7 @@ h1{
 
  h2{
     margin: 0 0 20px;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family:  Arial, sans-serif;
     font-size: 25px;
     letter-spacing: 1px; 
     font-weight: 700;
@@ -151,7 +151,7 @@ a {
 
     margin-top: 0px;
     margin-bottom: 0px;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Arial, sans-serif;
     color: white;
 }
 .timer_box p{
@@ -176,7 +176,7 @@ a:focus {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
-    font-family: 'Open Sans', Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Arial, sans-serif;
     background-color: #000;
 }
 
@@ -273,7 +273,7 @@ a:focus {
 
 
 .article-body{
-    font-family: 'Open Sans', Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family:  Arial, sans-serif;
     height: auto;
     background-color: white;
     margin-top: 100px;
@@ -488,7 +488,7 @@ a:focus {
 .btn {
     border-radius: 0;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family:  Arial, sans-serif;
     font-weight: 400;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
@@ -551,7 +551,7 @@ body {
 }
 
   .control-label {
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family:  Arial, sans-serif;
     font-size: 20px;
   }
 
